@@ -698,7 +698,22 @@ static int	get_values(unsigned char poller_type)
 			items[i].state = ITEM_STATE_NORMAL;
 			dc_add_history(items[i].itemid, items[i].value_type, items[i].flags, &results[i], &timespec,
 					items[i].state, NULL);
-			lastlogsizes[i] = get_log_result_lastlogsize(&results[i]);
+
+			if (0 != ISSET_LOG(&results[i]))
+			{
+				if (NULL != results[i].logs[0])
+				{
+					size_t	j;
+
+					for (j = 1; NULL != results[i].logs[j]; j++)
+						;
+
+					lastlogsizes[i] = results[i].logs[j - 1]->lastlogsize;
+				}
+				else
+					lastlogsizes[i] = items[i].lastlogsize;
+			}
+
 		}
 		else if (NOTSUPPORTED == errcodes[i] || AGENT_ERROR == errcodes[i] || CONFIG_ERROR == errcodes[i])
 		{
